--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,74 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+header {
+    height: 80px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 20px;
+    
+}
+
+main {
+    width: 100vw;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+
+.container {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    width: 700px;
+    height: 700px;
+    padding: 20px;
+    background-color: aquamarine;
+}
+
+#timerMenu {
+    background-color: green;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    width: 650px;
+    height: 650px;
+
+}
+
+.cardHeader {
+    width: 100%;
+    background-color: yellow;
+    text-align: center;
+    padding: 16px 0;
+    margin-bottom: 16px;
+}
+
+.menuBtns {
+    margin-top:20px;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 10px 100px;
+    width: 100%;
+    max-width: 150px;
+    margin: 20px auto;
+    text-align: center;
+    justify-content: center;
+}
+
+.menuBtns button {
+    padding: 10px;
+    font-size: 16px;
+    cursor: pointer;
+    width: 100%;
+    height: 60px;
+}
+
+
+#timerScreen {
+    background-color: purple;
+    display: none;
+}
